# s3-image-service

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
