[package]
name = "s3-image-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"] }
rocket-multipart-form-data = "0.10.0"
sha2 = "0.10.2"
aws-config = "0.7.0"
aws-sdk-s3 = "0.7.0"
dotenv = "0.15.0"
fastrand = "1.7.0"
serde = { version = "1.0.136", features = ["derive"] }